Revision history for {{$dist->name}}

{{$NEXT}}
 - convert to Type::Tiny
 - Mostly port to Moo

0.002224  2019-03-09 05:16:47+00:00 Europe/London
 - binmode on all filehandles so lines always end LF - thanks @wchristian
 - more sophisticated SQL parsing handles Pg $$ stuff - thanks @mrenvoize
   for report

0.002223  2019-03-07 01:36:36+00:00 Europe/London
 - handle "package NAME VERSION" in a DBIx::Class::Schema - $VERSION
   will be object
 - add needed dep - thanks @wheinze

0.002222  2018-01-06 10:25:42-08:00 America/Los_Angeles
 - Stop defaulting to include DROP TABLE, introduced by fix in prior release
   (Fixes GH#59, thanks for the report Eugen Konkov!)

0.002221  2017-09-27 21:19:42-04:00 America/New_York
 - Allow easy changing the version storage table name, which makes subclassing
   much less painful (Thanks Andrew Gregory!)
 - Above change renamed database_version => initial_version
 - Fix args passed to SQL::Translator::Diff
 - Add Michael McClimon as comaint

0.002220  2017-08-29 16:59:10-07:00 America/Los_Angeles
 - generate short package names for scripts (Fixes GH#55)
   (Thanks Andrew Gregory!)
 - Fix args to internal method (Fixes GH#53)
   (Thanks Alastair McGowan-Douglas!)
 - Allow schema versions to be version objects (Fixes GH#51)
   (Good find Jonathan Scott Duff!)

0.002219  2017-03-19 21:15:19-07:00 America/Los_Angeles
 - Fix typo in docs (Thanks Aaron Crane) (Fixes GH#49)
 - Fix spelling mistake in POD (Thanks Stefan Hornburg!)
 - Add links to ::Intro from the docs (Thanks Martin Renvoize!)

0.002218  2015-10-31 16:35:26-07:00 America/Los_Angeles
 - Fix spelling mistake in POD (Thanks Gregor Herrmann!)

0.002217  2015-10-04 15:05:01-07:00 America/Los_Angeles
 - Document Custom Script Helper pattern

0.002216  2015-06-14 09:34:57-07:00 America/Los_Angeles
 - Use Pod::Weaver::Plugin::Ditaa to render diagram

0.002215  2015-01-10 13:58:10-06:00 America/Chicago
 - Improve documentation for how to portably create indices