@@ -5,9 +5,9 @@ requires 'Log::Contextual' => 0.005005;
 requires 'Path::Class' => 0.26;
 requires 'DBIx::Class' => 0.08121;
 requires 'Module::Runtime' => 0.001;
-requires 'Moose' => 1.0;
+requires 'Moose' => 2.2011;
 requires 'Moo' => 2.0;
-requires 'MooseX::Role::Parameterized' => 0.18;
+requires 'Package::Variant' => 0;
 requires 'Type::Tiny' => '1.004004';
 requires 'Try::Tiny' => 0;
 requires 'SQL::Translator' => 0.11005;
