@@ -3,6 +3,7 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
  - convert to Type::Tiny
  - Mostly port to Moo
+ - convert parameterised role to Package::Variant
 
 0.002224  2019-03-09 05:16:47+00:00 Europe/London
  - binmode on all filehandles so lines always end LF - thanks @wchristian
